--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+boston_housing_data.csv
+formatted_data.csv
+requirements.txt
+.ipyn_checkpoints
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
